--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chance": "^1.1.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "node": "^21.1.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
