--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,23 @@
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.5",
+    "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
+    "html-to-pdfmake": "^2.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "jspdf-invoice-template": "^1.4.3",
+    "jspdf-invoice-template-nodejs": "^1.4.30",
+    "pdfmake": "^0.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
