--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jspdf-autotable": "^3.7.1",
     "jspdf-invoice-template": "^1.4.3",
     "jspdf-invoice-template-nodejs": "^1.4.30",
+    "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
