--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm i" 
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +19,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "node": "^21.1.0",
+    "nodemailer": "^6.9.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
